src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AIA_Status__c</fullName>
        <label>AIA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Approvals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Internal Review Document Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Printed Benefit Guides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved - Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Audit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_C_C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - C&amp;C</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Contract_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Contract Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Legal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Legal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales_Service_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Sales Service Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver - Sales</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BSS_Codes__c</fullName>
        <label>BSS Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Review_Req_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supervisor Review Req&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ASO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully-Insured non-CFMI Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fully-Insured CFMI Matrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facets Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facets Vision</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>